# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/auth": {
+        "/auth": {
             "put": {
                 "description": "Autenticar o usuario atraves do email",
                 "consumes": [
@@ -43,7 +43,78 @@
                 }
             }
         },
-        "/api/create-user": {
+        "/loggout": {
+            "put": {
+                "description": "Altera o modo de login para false",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Desconectar o usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"message\": \"Result\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "put": {
+                "description": "Altera o modo de login para true",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Conectar o usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Senha do usuario",
+                        "name": "Password",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"message\": \"Result\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
             "post": {
                 "description": "Criar um usuario a partir das novas infos",
                 "consumes": [
@@ -89,78 +160,7 @@
                 }
             }
         },
-        "/api/loggout": {
-            "put": {
-                "description": "Altera o modo de login para false",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Login"
-                ],
-                "summary": "Desconectar o usuario",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email do usuario",
-                        "name": "Email",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"message\": \"Result\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/login": {
-            "put": {
-                "description": "Altera o modo de login para true",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Login"
-                ],
-                "summary": "Conectar o usuario",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email do usuario",
-                        "name": "Email",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Senha do usuario",
-                        "name": "Password",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"message\": \"Result\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/token": {
+        "/token": {
             "post": {
                 "description": "Criar o token e ser enviado ao usuario",
                 "consumes": [
@@ -192,7 +192,7 @@
                 }
             }
         },
-        "/api/user": {
+        "/user": {
             "get": {
                 "description": "Buscar um usuario",
                 "consumes": [
